--- a/templates/slides/slide-1-title.html
+++ b/templates/slides/slide-1-title.html
@@ -35,12 +35,12 @@
     .title {
         font-family: 'Red Rose', cursive;
         font-weight: 700;
-        color: white;
+        color: #007559;
         font-size: 59px;
         line-height: 1.1;
         margin-bottom: 30px;
         text-align: center;
-        text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         padding: 0 80px;
         -webkit-user-select: none;
         -moz-user-select: none;
@@ -50,12 +50,12 @@
     .subtitle {
         font-family: 'Red Rose', cursive;
         font-weight: 700;
-        color: white;
+        color: #007559;
         font-size: 24px;
         line-height: 1.3;
         margin-bottom: 35px;
         text-align: center;
-        text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
         padding: 0 60px;
         -webkit-user-select: none;
         -moz-user-select: none;
