--- a/templates/slides/slide-7-sources.html
+++ b/templates/slides/slide-7-sources.html
@@ -114,10 +114,19 @@
         padding: 0 60px 25px;
         font-style: italic;
     }
+    .logo {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 80px;
+        height: 80px;
+        z-index: 10;
+    }
 </style>
 </head>
 <body>
 <div class="slide-container">
+<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Sources &amp; References</div>
 <div class="subtitle">Data &amp; Research Foundations</div>
@@ -145,6 +154,7 @@ Healthcare Cost Impact
 Productivity &amp; Absenteeism
 </div>
 <ul class="source-list">
+<li class="source-item"><strong>Gubler, T., Larkin, I., &amp; Pierce, L. (2018).</strong> "Doing Well by Making Well: The Impact of Corporate Wellness Programs on Employee Productivity." <em>Management Science</em>, 64(11), 4967-4987.</li>
 <li class="source-item">Journal of Occupational Health Psychology (2024). "Meta-analysis of Wellness Interventions and Workforce Productivity." Vol. 28, 52-67.</li>
 <li class="source-item">UK Health &amp; Safety Executive (2023). "Work-related Stress and Wellness Interventions." <span class="source-link">hse.gov.uk/statistics/wellness</span></li>
 </ul>
