--- a/templates/slides/slide-4-program.html
+++ b/templates/slides/slide-4-program.html
@@ -105,10 +105,19 @@
         text-align: center;
         padding: 0 60px 25px;
     }
+    .logo {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 80px;
+        height: 80px;
+        z-index: 10;
+    }
 </style>
 </head>
 <body>
 <div class="slide-container">
+<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Barn Gym Corporate Wellness</div>
 <div class="subtitle">What You Get</div>
