--- a/templates/slides/slide-5-measurement.html
+++ b/templates/slides/slide-5-measurement.html
@@ -158,10 +158,19 @@
         color: #333333;
         line-height: 1.5;
     }
+    .logo {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 80px;
+        height: 80px;
+        z-index: 10;
+    }
 </style>
 </head>
 <body>
 <div class="slide-container">
+<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Measurement &amp; Reporting</div>
 <div class="subtitle">How We Track Program Success</div>
