--- a/templates/slides/slide-3-financial.html
+++ b/templates/slides/slide-3-financial.html
@@ -147,9 +147,10 @@
         position: absolute;
         top: 20px;
         right: 20px;
-        width: 80px;
-        height: 80px;
-        z-index: 10;
+        width: 120px;
+        height: 120px;
+        z-index: 100;
+        opacity: 1;
     }
 </style>
 </head>
