--- a/templates/slides/slide-6-next-steps.html
+++ b/templates/slides/slide-6-next-steps.html
@@ -63,7 +63,7 @@
         flex: 1;
         background-color: #E6F4F1;
         border-radius: 16px;
-        padding: 30px;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -144,9 +144,10 @@
         position: absolute;
         top: 20px;
         right: 20px;
-        width: 80px;
-        height: 80px;
-        z-index: 10;
+        width: 120px;
+        height: 120px;
+        z-index: 100;
+        opacity: 1;
     }
 </style>
 </head>
