--- a/templates/slides/slide-7-sources.html
+++ b/templates/slides/slide-7-sources.html
@@ -93,10 +93,10 @@
     .source-item {
         font-family: 'Raleway', sans-serif;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 14px;
         color: #333333;
-        margin-bottom: 10px;
-        line-height: 1.4;
+        margin-bottom: 8px;
+        line-height: 1.3;
     }
     .source-link {
         color: #007559;
@@ -118,9 +118,10 @@
         position: absolute;
         top: 20px;
         right: 20px;
-        width: 80px;
-        height: 80px;
-        z-index: 10;
+        width: 120px;
+        height: 120px;
+        z-index: 100;
+        opacity: 1;
     }
 </style>
 </head>
