--- a/templates/slides/slide-6-next-steps.html
+++ b/templates/slides/slide-6-next-steps.html
@@ -153,7 +153,7 @@
 </head>
 <body>
 <div class="slide-container">
-<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
+<img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Your Path to Proof</div>
 <div class="subtitle">Simple Steps to Get Started</div>
