--- a/templates/slides/slide-1-title.html
+++ b/templates/slides/slide-1-title.html
@@ -90,7 +90,7 @@
 </head>
 <body>
 <div class="slide-container">
-<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
+<img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="content-wrapper">
 <div class="title">CORPORATE WELLNESS ROI ANALYSIS</div>
 <div class="subtitle">Prepared for {{COMPANY_NAME}}</div>
