--- a/templates/slides/slide-2-executive.html
+++ b/templates/slides/slide-2-executive.html
@@ -134,7 +134,7 @@
 </head>
 <body>
 <div class="slide-container">
-<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
+<img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Executive Overview</div>
 <div class="subtitle">Key Performance Metrics for {{COMPANY_NAME}}</div>
