--- a/templates/slides/slide-7-sources.html
+++ b/templates/slides/slide-7-sources.html
@@ -127,7 +127,7 @@
 </head>
 <body>
 <div class="slide-container">
-<img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
+<img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Sources &amp; References</div>
 <div class="subtitle">Data &amp; Research Foundations</div>
