--- a/templates/slides/slide-8-thank-you.html
+++ b/templates/slides/slide-8-thank-you.html
@@ -142,7 +142,7 @@
 </head>
 <body>
 <div class="slide-container">
-    <img src="Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
+    <img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
     
     <div class="main-title">Thank You</div>
     <div class="subtitle">Let's Transform Your Workplace Wellness</div>
