--- a/templates/slides/slide-8-thank-you.html
+++ b/templates/slides/slide-8-thank-you.html
@@ -29,8 +29,8 @@
     }
     .main-title {
         font-family: 'Red Rose', cursive;
-        font-weight: 700;
-        color: white;
+        font-weight: 400;
+        color: #007559;
         font-size: 64px;
         line-height: 1.2;
         margin-bottom: 20px;
@@ -38,8 +38,8 @@
     }
     .subtitle {
         font-family: 'Raleway', sans-serif;
-        font-weight: 600;
-        color: white;
+        font-weight: 400;
+        color: #007559;
         font-size: 32px;
         line-height: 1.3;
         margin-bottom: 40px;
@@ -61,7 +61,7 @@
     }
     .contact-title {
         font-family: 'Raleway', sans-serif;
-        font-weight: 700;
+        font-weight: 400;
         color: #007559;
         font-size: 28px;
         margin-bottom: 30px;
@@ -142,8 +142,6 @@
 </head>
 <body>
 <div class="slide-container">
-    <img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
-    
     <div class="main-title">Thank You</div>
     <div class="subtitle">Let's Transform Your Workplace Wellness</div>
     
