--- a/templates/slides/slide-1-title.html
+++ b/templates/slides/slide-1-title.html
@@ -9,142 +9,95 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" rel="stylesheet"/>
 <style>
-   body {
-       margin: 0;
-       padding: 0;
-       overflow: hidden;
-   }
-   .slide-container {
-       width: 1280px;
-       min-height: 720px;
-       max-height: 720px;
-       background: linear-gradient(135deg, #007559 0%, #00a86b 100%);
-       position: relative;
-       overflow: hidden;
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-       text-align: center;
-   }
-   .main-title {
-       font-family: 'Red Rose', cursive;
-       font-weight: 400;
-       color: #007559;
-       font-size: 64px;
-       line-height: 1.2;
-       margin-bottom: 20px;
-       text-shadow: 0 2px 4px rgba(0,0,0,0.3);
-   }
-   .subtitle {
-       font-family: 'Raleway', sans-serif;
-       font-weight: 400;
-       color: #007559;
-       font-size: 32px;
-       line-height: 1.3;
-       margin-bottom: 40px;
-       opacity: 0.95;
-   }
-   .contact-container {
-       background: rgba(255, 255, 255, 0.95);
-       border-radius: 20px;
-       padding: 40px 60px;
-       box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-       margin-bottom: 40px;
-       max-width: 800px;
-   }
-   .contact-title {
-       font-family: 'Raleway', sans-serif;
-       font-weight: 400;
-       color: #007559;
-       font-size: 28px;
-       margin-bottom: 30px;
-   }
-   .contacts-row {
-       display: flex;
-       flex-direction: row;
-       justify-content: space-between;
-       align-items: center;
-   }
-   .contact-item {
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       font-family: 'Raleway', sans-serif;
-       font-weight: 500;
-       font-size: 18px;
-       color: #333333;
-       margin: 0 10px;
-   }
-   .contact-icon {
-       background-color: #007559;
-       color: white;
-       width: 50px;
-       height: 50px;
-       border-radius: 50%;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       font-size: 20px;
-       margin-right: 15px;
-       flex-shrink: 0;
-   }
-   .contact-text {
-       text-align: left;
-   }
-   .contact-link {
-       color: #007559;
-       text-decoration: none;
-       font-weight: 600;
-   }
-   .contact-link:hover {
-       text-decoration: underline;
-   }
-   .footer-text {
-       font-family: 'Raleway', sans-serif;
-       font-weight: 400;
-       font-size: 18px;
-       color: #007559;
-       opacity: 0.9;
-       margin-top: 20px;
-   }
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+    .slide-container {
+        width: 1280px;
+        min-height: 720px;
+        background-color: #007559;
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .content-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 25px;
+    }
+    .title {
+        font-family: 'Red Rose', cursive;
+        font-weight: 400;
+        color: #007559;
+        font-size: 59px;
+        line-height: 1.1;
+        margin-bottom: 30px;
+        text-align: center;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        padding: 0 80px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    .subtitle {
+        font-family: 'Red Rose', cursive;
+        font-weight: 400;
+        color: #007559;
+        font-size: 24px;
+        line-height: 1.3;
+        margin-bottom: 35px;
+        text-align: center;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+        padding: 0 60px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    .contact-info {
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        text-align: center;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 500;
+        color: white;
+        font-size: 18px;
+        padding: 0 25px;
+    }
+    .date {
+        margin-bottom: 8px;
+    }
+    .logo {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 120px;
+        height: 120px;
+        z-index: 100;
+        opacity: 1;
+    }
 </style>
 </head>
 <body>
 <div class="slide-container">
-<div class="main-title">CORPORATE WELLNESS ROI ANALYSIS</div>
+<img src="/barn-gym-logo.svg" alt="Barn Gym Logo" class="logo">
+<div class="content-wrapper">
+<div class="title">CORPORATE WELLNESS ROI ANALYSIS</div>
 <div class="subtitle">Prepared for {{COMPANY_NAME}}</div>
-<div class="contact-container">
-<div class="contact-title">Get In Touch</div>
-<div class="contacts-row">
-<div class="contact-item">
-<div class="contact-icon">
-<i class="fas fa-envelope"></i>
 </div>
-<div class="contact-text">
-<a class="contact-link" href="mailto:Guy@barn-gym.com">Guy@barn-gym.com</a>
-</div>
-</div>
-<div class="contact-item">
-<div class="contact-icon">
-<i class="fas fa-phone"></i>
-</div>
-<div class="contact-text">
-<a class="contact-link" href="tel:+447739790874">+44 7739 790874</a>
-</div>
-</div>
-<div class="contact-item">
-<div class="contact-icon">
-<i class="fas fa-globe"></i>
-</div>
-<div class="contact-text">
-<a class="contact-link" href="https://www.barn-gym.com" target="_blank">www.barn-gym.com</a>
-</div>
-</div>
-</div>
-</div>
-<div class="footer-text">
-{{ANALYSIS_DATE}}
+<div class="contact-info">
+<div class="date">{{ANALYSIS_DATE}}</div>
+<div class="email">guy@barn-gym.com</div>
 </div>
 </div>
 </body>
