--- a/templates/slides/slide-4-program.html
+++ b/templates/slides/slide-4-program.html
@@ -118,7 +118,7 @@
 </head>
 <body>
 <div class="slide-container">
-<img src="/Barn Gym Logo transparent copy.png" alt="Barn Gym Logo" class="logo">
+<img src="/Barn Gym Logo transparent.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Barn Gym Corporate Wellness</div>
 <div class="subtitle">What You Get</div>
