--- a/templates/slides/slide-5-measurement.html
+++ b/templates/slides/slide-5-measurement.html
@@ -171,7 +171,7 @@
 </head>
 <body>
 <div class="slide-container">
-<img src="/Barn Gym Logo transparent.png" alt="Barn Gym Logo" class="logo">
+<img src="/barn-gym-logo.png" alt="Barn Gym Logo" class="logo">
 <div class="header">
 <div class="main-title">Measurement &amp; Reporting</div>
 <div class="subtitle">How We Track Program Success</div>
