--- a/templates/slides/slide-8-thank-you.html
+++ b/templates/slides/slide-8-thank-you.html
@@ -64,6 +64,7 @@
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
+       flex-wrap: nowrap;
    }
    .contact-item {
        display: flex;
@@ -71,21 +72,22 @@
        justify-content: center;
        font-family: 'Raleway', sans-serif;
        font-weight: 500;
-       font-size: 18px;
+       font-size: 16px;
        color: #333333;
-       margin: 0 10px;
+       margin: 0 5px;
+       flex: 1;
    }
    .contact-icon {
        background-color: #007559;
        color: white;
-       width: 50px;
-       height: 50px;
+       width: 40px;
+       height: 40px;
        border-radius: 50%;
        display: flex;
        justify-content: center;
        align-items: center;
-       font-size: 20px;
-       margin-right: 15px;
+       font-size: 16px;
+       margin-right: 10px;
        flex-shrink: 0;
    }
    .contact-text {
