--- a/templates/slides/slide-8-thank-you.html
+++ b/templates/slides/slide-8-thank-you.html
@@ -50,7 +50,8 @@
        padding: 40px 60px;
        box-shadow: 0 10px 30px rgba(0,0,0,0.2);
        margin-bottom: 40px;
-       max-width: 800px;
+       max-width: 1000px;
+       width: 100%;
    }
    .contact-title {
        font-family: 'Raleway', sans-serif;
@@ -92,6 +93,7 @@
    }
    .contact-text {
        text-align: left;
+       white-space: nowrap;
    }
    .contact-link {
        color: #007559;
